# zitadel-cli

./: Cargo.toml  EXAMPLE.md  README.md  add_google_idp.json  add_user.json
.github/workflows/: tests.yml
examples/: add_organization.json  add_project.json
src/: cli_parser.rs  env.rs  error.rs  main.rs
src/cli_parser/: mod.rs
src/cli_parser/human_user/: mod.rs
src/cli_parser/idp/: mod.rs
src/cli_parser/org/: mod.rs
src/cli_parser/project/: mod.rs
src/commands/: add.rs  mod.rs
src/commands/login/: mod.rs
src/commands/login/flows/: mod.rs
src/commands/login/flows/authorization/: callback_server.rs  mod.rs
src/commands/login/flows/client_credential/: mod.rs
src/commands/login/flows/personal_access_token/: mod.rs
src/commands/logout/: mod.rs
src/payloads/: mod.rs  organization.rs  project.rs  user.rs
src/payloads/idp/: google.rs
